[gd_scene load_steps=5 format=2]

[ext_resource path="res://WorldObjects/Technical/DialogController/DialogController.gd" type="Script" id=1]
[ext_resource path="res://WorldObjects/Technical/InteractionController/InteractionController.tscn" type="PackedScene" id=2]
[ext_resource path="res://WorldObjects/Technical/TextBoxController/DialogTextBoxController.tscn" type="PackedScene" id=3]
[ext_resource path="res://WorldObjects/Technical/InteractionPopup/InteractionPopup.tscn" type="PackedScene" id=4]

[node name="DialogController" type="Node2D"]
script = ExtResource( 1 )

[node name="InteractionPopup" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -12 )

[node name="InteractionController" parent="." instance=ExtResource( 2 )]

[node name="DialogTextBoxController" parent="." instance=ExtResource( 3 )]
position = Vector2( 1, -29 )
interaction_controller_path = NodePath("../InteractionController")
